--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <h1 class="center" style="color: rgb(62, 112, 206);">录 屏 小 工 具</h1>
     <p class="cpr">by BD_Richie</p>
     <a href="./readme.html" class="cpr_1">使用说明</a>
+    <a href="./readmeForPeopleFromPages.html" class="cpr_1">从我的个人站来点这里！</a>
     <br>
     <div class="center">
         <button id="start" class="button_style_1">屏幕获取</button>
